fixed image not showing up

--- a/src/styles/home/_navbar.scss
+++ b/src/styles/home/_navbar.scss
@@ -14,7 +14,7 @@
   margin: 0 auto;
 
   &__img {
-    width: 10rem;
+    width: 6rem;
     img {
       width: 100%;
     }
